Updates to the intro

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -1153,7 +1153,9 @@
 	Year = {2012}}
 
 @inproceedings{ruoti2017weighing,
-	Title = {Redacted}}
+	Title = {Blinded for Peer Review},
+	Author = {Blinded for Peer Review}
+}
 
 @inproceedings{castro1999practical,
 	Author = {Castro, Miguel and Liskov, Barbara and others},
