--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -20,7 +20,7 @@ At the peak of its popularity, Bitcoin's market capitalization reached \$835.69 
 Nevertheless, there remains significant interest in the question of whether the technology underlying Bitcoin---known as \emph{Blockchain technology} or {Blockchain} for short---could be used to build other interesting cryptocurrencies or distributed systems.
 In particular, we have consistently heard researchers, business executives, and government leadership ask the following three questions: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.%, and (4) how does it relate to other approache distributed technologies (e.g., distributed databases).
 
-Unfortunately, there is a lack of clarity regarding the answers to these questions in both the community and the literature.
+Unfortunately, there is a lack of clarity regarding the answers to these questions in both the community and the literature, impeding the ability for researchers to properly understand, evaluate, and leverage Blockchain technology.
 This lack of clarity stems at least in part from competing viewpoints and terminology regarding Blockchain technology, resulting in seemingly contradictory statements that can all be true in their respective contexts.
 In this paper, we attempt to address this ambiguity and provide a holistic overview of Blockchain technology, set forth a common lexicon for discussing Blockchain technology, and answer the three questions identified above.
 
