Updates to the result section.

--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -9,11 +9,11 @@ To help readers situate Blockchain technology within this greater ecosystem we h
 \begin{figure*}
 	\centering
 	\includegraphics[width=.75\textwidth]{figures/BlockchainFlowchart}
-	\caption{Comparing decentralized databases. Blockchain is highlighted in the bottom right corner.}
+	\caption{Comparing decentralized databases}
 	\label{fig:blockchainFlowchart}
 \end{figure*}
 
-The first property in our taxonomy considers who has the authority to manage and update the database: \emph{what is the governance model?} In a centrally governed database (``Centralized''), a single entity performs these tasks. Alternatively, the system can use a consensus protocol to allow for decentralized governance (``Decentralized'').
+The first property in our taxonomy considers who has the authority to manage and update the database: \emph{what is the governance model?} In a singularly governed database (``Singular''), a single entity performs these tasks. Alternatively, the system can use a consensus protocol to allow for shared governance (``Shared'').
 
 Next, we consider the security model by asking \emph{where is the root of trust?}
 This refers to the entity or entities that must behave honestly in order for the system to be secure.
@@ -47,7 +47,7 @@ If we modify the system to allow monitors to play this role, they have become co
 	\centering
 	\includegraphics[page=1,width=\columnwidth]{figures/grounded-theory-main}
 	
-	Technical properties are in blue and technical primitives are in green.
-	\caption{Technical Properties for Blockchain Technology With Supporting Technical Primitives}
+	{\small Blue---technical properties, green---technical primitives}
+	\caption{Technical Properties and Primitives}
 	\label{fig:technical-properties-full}
 \end{figure}
