--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -12,7 +12,7 @@ In this section we discuss the remaining results from our grounded theory work.
 	\centering
 	\includegraphics[page=3,width=\columnwidth]{figures/grounded-theory-main}
 	
-	Arrows indicate that the destination depends on the source. Orange nodes are normative properties, blue nodes are technical properties, purple nodes are capabilities, and green nodes are technical primitives.
+	{\small Orange---normative properties, purple---capabilities, blue---technical properties, green---technical primitives. Arrows indicate that the destination depends on the source.}
 	\caption{Normative Properties for Blockchain Technology}
 	\label{fig:normative-properties}
 \end{figure}
