--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -30,13 +30,12 @@ In this paper, we attempt to address this ambiguity and provide a holistic overv
 	\begin{tabular}{l|l}
 		\textbf{Academia} & \textbf{Industry} \\
 
-		
 		Increased interest recently & Long-term interest \\
 		Focused on specific subsystems & Takes a holistic view \\
 		Technical experts & Use case experts \\ \hline
 	\end{tabular}
 	
-	\caption{Comparison of academic and industry sources on Blockchain technology}
+	\caption{Academic vs. industrial sources}
 	\label{tab:sources}
 \end{table}
 
@@ -67,7 +66,7 @@ Concretely, our key contributions are:
 
 \begin{enumerate}
 	\item \textbf{Providing a holistic overview of Blockchain technology's technical properties and the capabilities they enable.}
-	We organize the properties of Blockchain technology into three groups: shared governance and operation, the use of an append-only, decentralized ledger, and operational resilience.
+	We organize the properties of Blockchain technology into three groups: shared governance and operation, verifiable state, and resilience to data loss.
 	Taken together, these properties differentiate Blockchain technology from other distributed technologies.
 	Using these properties, systems built with Blockchain technology have easy access to a range of important capabilities: full-system provenance, auditability, access control, psuedonymity, automatic execution (i.e., smart contracts), and data discoverability.
 	
