--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -115,7 +115,7 @@ Based on these interconnections, concepts were divided into five different categ
 	Technical properties are the components that make up of Blockchain technology. Examples include decentralized governance, a consensus protocol, and an append-only transaction ledger.
 	
 	\item \emph{Capabilities (Figure~\ref{fig:Capabilities}).}
-	Capabilities are the high-level features provided by Blockchain technology's technical properties. Examples include automatic executions (i.e., smart contracts), internal auditability, and resilience.
+	Capabilities are the high-level features provided by Blockchain technology's technical properties. Examples include automatic executions (i.e., smart contracts), internal auditability, and access control.
 	
 	\item \emph{Technical primitives.}
 	Primitives are the building blocks used to construct the technical properties and capabilities of Blockchain technology. Examples include timestamps, hashchains, and peer-to-to-peer communication.
